Everything Working :rocket:

--- a/src/templates/allrecipes.html
+++ b/src/templates/allrecipes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body  style="background-color:rgb(50, 192, 37);">
     <header><section id="ingredients">
         <h3>Searched by: {{variable[1]}}</h3>
         <p>List of recipes</p>
@@ -27,6 +27,7 @@
             <a href='/prueba2/{{variable[0][9]}}'><button>Link To recipe</button></a>
             <li>{{variable[0][10]}}</li>
             <a href='/prueba2/{{variable[0][10]}}'><button>Link To recipe</button></a>
+        </ul>
     </header>
 </body>
 </html>
