--- a/src/templates/recipes.html
+++ b/src/templates/recipes.html
@@ -1,16 +1,21 @@
 <html>
 
 <head>
-    <title>Simple caprese salad</title>
+    <title>Sket´s Recipes</title>
 </head>
 
-<body>
+<body  style="background-color:rgb(37, 122, 192);">
     <header>
         <section>
+            <center>
             <h2>{{variable[0]}}</h2>
+            <h2>Chef: {{variable[5]}}</h2>
+            </center>
         </section>
         <section>
-            <img src="{{variable[1]}}" alt="W3Schools.com" width="104" height="142">
+            <center>
+            <img src="{{variable[1]}}" alt="W3Schools.com" width="450" height="242">
+            </center>
         </section>
     </header>
     <article>
@@ -19,12 +24,6 @@
             <p>{{variable[2]}}</p>
             <ul>
                 <li>{{variable[3]}}</li>
-                <li>{{variable[3][0:15]}}</li>
-                <li></a></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
             </ul>
         </section>
         <section>
