--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
     <title>What's in your Fridge!</title>
 </head>
 <body style="background-color:rgb(37, 122, 192);">
-<h1 style="font-family:Palatino">Welcome to What's in your fride!</h1>
+<h1 style="font-family:Palatino">Welcome to What's in your fridge!</h1>
   <img src="http://sponsored.bostonglobe.com/wp-content/uploads/2018/06/LMXS27626S-Interior-Shelving-Styled.jpg" alt="whats in your fridge" id="img_quality" style='padding:1px; border:1px solid #021a40; width: 40%; height: 40%'>
 </center>
 <left>
@@ -22,7 +22,7 @@
   <form action="search/level" method="post">
     <select name="difficulty" id="difficulty">
         <option value="Easy">Easy</option>
-        <option value="An effort">Medium</option>
+        <option value="More effort">Medium</option>
         <option value="A challenge">Hard</option>
         
     </select> 
